--- a/index.html
+++ b/index.html
@@ -8,9 +8,22 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
     <body>
+        <header>
+            <div class="row">
+                <div class="col">
+                    <H1>CAMPO MINATO</H1>
+                    <button id="play">PLAY
+                </div>
+            </div>
+        </header>
+
+        <main>
+            <div id="griglia"></div>
 
 
-        
+
+        </main>
+
         <script type="text/javascript" src="./js/script.js"></script>
         
     </body>
