Inizio lavoro bonus

--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -15,7 +15,16 @@
             <div class="row">
                 <div class="col">
                     <H1>CAMPO MINATO</H1>
-                        <button id="play">Play </button>
+                    <div>
+                        <button id="play">Play</button>
+                        <span> Scegli la difficoltà</span>
+                        <select name="level" id="level">
+                            <option value="1">Facile</option>
+                            <option value="2">Medio</option>
+                            <option value="3">Difficile</option>
+                        </select>
+                        
+                        </div>
                 </div>
             </div>
         </header>
